feature: add support for submitting measured data to Google Forms