@@ -6,9 +6,7 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 
 import javax.net.ssl.HttpsURLConnection;
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
@@ -19,7 +17,7 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 public class Forms {
-    public static final String REQUEST_URL = "https://www.docs.google.com/forms/d/e/%s/formResponse";
+    public static final String REQUEST_URL = "https://docs.google.com/forms/d/e/%s/formResponse";
 
     public static int submit(UserData user, MeasurementData data){
         Optional<InputMapping> optionalMapping =  InputMapping.getInstance(user.getClassRoom());
@@ -27,37 +25,17 @@ public class Forms {
         InputMapping mapping = optionalMapping.get();
 
         String path = String.format(REQUEST_URL,mapping.getFormId());
-        String param = createParams(mapping,user,data).stream().map(x->String.format("entry.%s=%s",x.entry,x.value)).collect(Collectors.joining("&"));
+        String param = createParams(mapping,user,data).stream().map(x->String.format("entry.%s=%s",x.entry,URLEncoder.encode(x.value,StandardCharsets.UTF_8))).collect(Collectors.joining("&"));
 
         HttpClient client = HttpClient.newHttpClient();
 
         try {
-            URI uri = URI.create(URLEncoder.encode(path +"?"+param, "UTF-8"));
-            URL url = new URL(REQUEST_URL+"?"+URLEncoder.encode(param,StandardCharsets.UTF_8));
-            System.out.println("URI:"+url.toString());
+            URL url = URI.create(path +"?"+param).toURL();
             HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.connect();
             int res = connection.getResponseCode();
             connection.disconnect();
-
-            if(res!=200){
-                BufferedReader br
-                        = new BufferedReader(
-                        new InputStreamReader(connection.getInputStream()));
-
-                StringBuilder sb = new StringBuilder();
-
-                String line;
-
-                while ((line = br.readLine()) != null) {
-                    sb.append(line);
-                }
-
-                System.out.println(sb.toString());
-
-                br.close();
-            }
 
             return res;
         } catch (IOException e) {
